cs352/proj3/tests/type_rules/type_err/9.js
<script type="text/JavaScript">
var x = 5 + "a"
var y = x + 2
var z = y + "b"
</script>
